# GAMath

./: .gitmodules  CMakeLists.txt  README.md
Configs/: C2GA.json  C3GA.json  E2GA.json  E3GA.json  MasterConfig.json
Demo/: CMakeLists.txt
Demo/Source/: Constraint.cpp  Constraint.h  Drawer.cpp  Drawer.h  GLCanvas.cpp  GLCanvas.h  Main.cpp  MainWindow.cpp  MainWindow.h  Object.cpp  Object.h
Source/C2GA/: Bivector.cpp  Bivector.h  Multivector.cpp  Multivector.h  PsuedoScalar.cpp  PsuedoScalar.h  Rotor.cpp  Rotor.h  Scalar.cpp  Scalar.h  Trivector.cpp  Trivector.h  Vector.cpp  Vector.h
Source/C3GA/: Bivector.cpp  Bivector.h  Multivector.cpp  Multivector.h  PsuedoScalar.cpp  PsuedoScalar.h  Quadvector.cpp  Quadvector.h  Rotor.cpp  Rotor.h  Scalar.cpp  Scalar.h  Trivector.cpp  Trivector.h  Vector.cpp  Vector.h
Source/C3GA/Geometry/: Circle.cpp  Circle.h  Line.cpp  Line.h  Notes.md  Plane.cpp  Plane.h  Point.cpp  Point.h  PointPair.cpp  PointPair.h  Sphere.cpp  Sphere.h  TangentPoint.cpp  TangentPoint.h
Source/E2GA/: Multivector.cpp  Multivector.h  PsuedoScalar.cpp  PsuedoScalar.h  Rotor.cpp  Rotor.h  Scalar.cpp  Scalar.h  Vector.cpp  Vector.h
Source/E3GA/: Bivector.cpp  Bivector.h  Multivector.cpp  Multivector.h  PsuedoScalar.cpp  PsuedoScalar.h  Rotor.cpp  Rotor.h  Scalar.cpp  Scalar.h  Vector.cpp  Vector.h
